# winfolsize

./: Cargo.toml  LICENSE  README.md  build.rs  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
src/: app.rs  cli.rs  delete.rs  main.rs
src/scanner/: mod.rs  types.rs  walker.rs
src/ui/: mod.rs  sidebar.rs  status_bar.rs  toolbar.rs
src/viz/: colors.rs  mod.rs  sunburst.rs  treemap.rs
