[package]
name = "winfolsize"
version = "0.1.0"
edition = "2024"
description = "A Windows disk space visualizer with treemap and sunburst views"
license = "MIT"
authors = ["Wictor Wilén <https://www.wictorwilen.se>"]
repository = "https://github.com/nicolexy/winfolsize"
readme = "README.md"
keywords = ["disk-space", "visualizer", "treemap", "sunburst", "windows"]
categories = ["visualization", "filesystem"]

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
rfd = "0.15"
humansize = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_UI_Shell"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[build-dependencies]
winresource = "0.1"
